<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_mode"
    android:id="@+id/main_scroll"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/backapp"
        android:id="@+id/mainLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/Headline"
            android:layout_alignParentStart="true"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:text="@string/Headline"
            android:textStyle="bold"
            android:background="@drawable/headline_shape"
            android:textColor="@color/blackTextColor"
            android:focusable="true"
            android:focusableInTouchMode="true"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignStart="@id/Headline"
            android:text="@string/modeString"
            android:background="@drawable/mode_selector"
            android:id="@+id/modeSelector"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/Headline"
            android:textColor="@color/blackTextColor"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:layout_toEndOf="@id/modeSelector"
            android:layout_alignBaseline="@id/modeSelector"
            android:layout_marginStart="30dp"
            android:text="@string/blinkingText"
            android:textStyle="bold|italic"
            android:id="@+id/blinkingText"
            android:visibility="invisible"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_toEndOf="@id/RatingTxt"
            android:layout_marginStart="50dp"
            android:layout_alignStart="@id/blinkingText"
            android:id="@+id/Rating"
            android:progressDrawable="@drawable/rating_layers"
            android:stepSize="1"
            android:layout_below="@id/modeSelector"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignStart="@id/Headline"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_alignBaseline="@id/Rating"
            android:layout_below="@id/modeSelector"
            android:text="@string/ratingTxt"
            android:textColor="@color/blackTextColor"
            android:id="@+id/RatingTxt"/>
        <EditText
            android:id="@+id/nameInput"
            android:layout_width="0dp"
            android:layout_alignEnd="@id/innerLayout"
            android:layout_alignStart="@id/Headline"
            android:layout_height="wrap_content"
            android:layout_below="@id/Rating"
            android:layout_marginTop="20dp"
            android:hint="@string/hintName"
            android:gravity="center"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp"
            android:imeOptions="actionGo"
            android:background="@drawable/edittext_shape"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/nameInput"
            android:layout_alignStart="@id/Headline"
            android:layout_alignEnd="@id/Headline"
            android:id="@+id/innerLayout">
            <Spinner
                android:layout_height="wrap_content"
                android:layout_width="50dp"
                android:id="@+id/phoneSpinner"
                style="@style/spinnerItemStyle"
                android:layout_marginStart="5dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:spinnerMode="dropdown"
                android:focusable="false"
                android:background="@drawable/costum_spinner"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintPhone"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/phoneSpinner"
                android:layout_marginTop="10dp"
                android:maxLength="7"
                android:padding="10dp"
                android:textSize="20sp"
                android:id="@+id/phoneInput"
                android:imeOptions="actionGo"
                android:background="@drawable/edittext_shape"
                android:inputType="phone"/>
        </RelativeLayout>
        <EditText
            android:id="@+id/addressInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/nameInput"
            android:layout_alignEnd="@id/innerLayout"
            android:layout_below="@id/innerLayout"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/hintAddress"
            android:gravity="center"
            android:padding="10dp"
            android:inputType="text"
            android:imeOptions="actionGo"
            android:background="@drawable/edittext_shape"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/Headline"
            android:layout_below="@id/addressInput"
            android:layout_marginTop="10dp"
            android:id="@+id/shippingTxt"
            android:text="@string/txtShipping"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/blackTextColor"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shipingAddress"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/shippingTxt"
            android:layout_below="@id/addressInput"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yesBtn"
                android:textStyle="bold"
                android:checked="true"
                android:id="@+id/yesRadio"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noBtn"
                android:textStyle="bold"
                android:checked="false"
                android:id="@+id/noRadio"/>
        </RadioGroup>
        <EditText
            android:id="@+id/shippingAddressInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/Headline"
            android:layout_alignEnd="@id/innerLayout"
            android:layout_below="@id/shipingAddress"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/hintShippingAddress"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="20sp"
            android:inputType="text"
            android:imeOptions="actionGo"
            android:visibility="gone"
            android:background="@drawable/edittext_shape"/>
        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/masksAmount"
            android:layout_below="@id/amountTxt"
            android:layout_alignStart="@id/Headline"
            android:layout_alignEnd="@id/shippingTxt"
            android:layout_marginTop="30dp"
            android:max="100"
            android:min="1"
            android:thumbTint="@color/finishStroke"
            android:progressTint="@color/finishStroke"
            android:secondaryProgressTint="@color/finishSolid"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/amountTxt"
            android:layout_below="@id/shippingAddressInput"
            android:layout_alignStart="@id/Headline"
            android:layout_marginTop="15dp"
            android:text="@string/masksAmountTxt"
            android:textSize="20sp"
            android:textColor="@color/blackTextColor"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/amountTxt"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/masksAmount"
            android:background="@drawable/button_selector"
            android:text="@string/submitTxt"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@color/blackTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/blackTextColor"
            android:id="@+id/selectTxt"
            android:text="@string/selectTxt"
            android:layout_below="@id/masksAmount"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_alignStart="@id/Headline"
            android:visibility="gone"/>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/orderButtons"
            android:layout_below="@id/selectTxt"
            android:layout_marginTop="20dp"
            android:layout_marginVertical="5dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/orderButtons"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentBottom="true"
            android:text="@string/finishBtn"
            android:textAllCaps="false"
            android:background="@drawable/finish_shape"
            android:id="@+id/finishBtn"
            android:enabled="false"/>
    </RelativeLayout>
</ScrollView>